fixed cara spacing + logo

--- a/Styles/contacts.css
+++ b/Styles/contacts.css
@@ -72,6 +72,7 @@ section {
 .discord-fast {
     display: flex;
     flex-flow: row wrap;
+    gap: 1rem;
     justify-content: space-evenly;
     align-items: center;
     &>.fast-flex {
@@ -153,7 +154,7 @@ section {
     border-radius: 1em;
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     gap: 1ch;
     padding: 1.5ch;
@@ -177,7 +178,7 @@ section {
     }
     &>img {
         margin-bottom: 1.5ch;
-        width: 60%;
+        height: 4rem;
     }
     &>a {
         color: #fff;
@@ -194,6 +195,10 @@ section {
             background-color: var(--hover-color);            
         }
     }
+}
+
+main {
+    margin-block: 3rem;
 }
 
 @media (aspect-ratio < 3 / 2) {
